herb add/edit absinth add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">HerbalDairy</string>
     <string name="own_herbas">owfmfkmrembn_hfertsdbfs</string>
     <string name="own_absinthes">owfmfkmrembn_akfdbasbirjkntkl_-es</string>
+    <string name="herb_to_edit">gkldfglkdfngdherdfb-toedkfdfgites</string>
     <string name="finish_dates">fhjninsfferislkfgh_fdfaltlles</string>
     <string name="finish_dates_sp">fhjninsfferislkfgh_sssssppp_fdfaltlles</string>
 
